--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Lone/wudi-export.git"
+    "url": "git+https://github.com/Lone/wuji-export.git"
   },
   "skpm": {
     "name": "无极Sketch标注",
